# office-hours

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  cliff.toml  flake.nix  rust-toolchain.toml
.github/workflows/: build.yaml  changelog.yaml  release.yaml
examples/: custom_hours.rs  default_hours.rs  macro.rs
src/: error.rs  lib.rs  macro.rs
tests/: test.rs
tests/macro/: failure_custom_hours.rs  failure_custom_hours.stderr  success_closure.rs  success_custom_hours.rs  success_default.rs
